app/tools/lidarr copy/lidarr-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: lidarr
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8686
  selector:
    app: lidarr
  type: LoadBalancer
  # if type: LoadBalancer is enabled than comment out INGRESS section below
status:
  loadBalancer: {}
