app/tools/lidarr copy/lidarr-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: lidarr
  namespace: media-server
spec:
  ingressClassName: traefik
  rules:
  - host: lidarr.home.adaminformatika.hu
    http:
      paths:
      - backend:
          service:
            name: lidarr
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - lidarr.home.adaminformatika.hu
    secretName: lidarr.home.adaminformatika.hu
